name:                hyperion-example
version:             0.1.0.0
author:              Petr Kravchuk 
copyright:           2020 Petr Kravchuk 
cabal-version:       >=1.10
build-type:          Simple

executable hyperion-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
      base
    , hyperion
    , optparse-applicative
    , filepath
    , monad-control
    , distributed-process
    , mtl
